<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Process" Id="{9ef05d25-baa7-4d4f-8caa-bafe5ed720f9}">
    <Declaration><![CDATA[TYPE ST_Process :
STRUCT
	BasketID : DINT;
	LoadingTime : DT;
	UnloadingTime : DT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>