<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_SEQUENCE" Id="{af65a115-586e-4807-a646-3739a2cf12a4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SEQUENCE
VAR
	Process : ARRAY [1..MAX_DBCOLUMNS] OF ST_Process;
	fbSQLDatabase : FB_SQLDatabaseEvt(sNetID := '', tTimeout := T#5S);
	fbSQLCommand : FB_SQLCommandEvt(sNetID := '', tTimeOut := T#5S);
	step : (OPEN_CONNECTION, CREATE_COMMAND, INSERT_COMMAND, CLOSE_CONNECTION, FINISH) := OPEN_CONNECTION;
	CMD_1 : STRING(5000);
	CMD_2 : STRING(5000);
	CMD_3 : STRING(5000);
	CMD_4 : STRING(5000);
	sCMD : STRING(5000);
	sCMD1 : STRING(5000);
	sCMD2 : STRING(5000);
	sCMD3 : STRING(5000);
	BasketID : STRING(5000);
	TotalItem : STRING(5000);
	Flavor : STRING(5000);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE step OF
	
	OPEN_CONNECTION:
		IF fbSQLDatabase.Connect(1) THEN
			step := CREATE_COMMAND;
		END_IF
		
	CREATE_COMMAND:
		IF fbSQLDatabase.CreateCmd(ADR(fbSQLCommand)) THEN
			step := INSERT_COMMAND;
		END_IF
		
	INSERT_COMMAND:
	
		CMD_1 := 'INSERT INTO TwinCATSQL (BasketID, LoadingTime, Flavor, TotalItem) VALUES (';
		CMD_2 := ', (CONVERT(varchar(20), GETDATE(), 108)), ';
		CMD_3 := ')';
		sCMD := CONCAT(CMD_1, CONCAT(BasketID, CMD_2));
		sCMD1 := CONCAT(sCMD, CONCAT(CONCAT('$'', Flavor), '$','));
		sCMD2 := CONCAT(sCMD1, CONCAT(TotalItem, CMD_3));
		
		IF fbSQLCommand.Execute(ADR(sCMD2), SIZEOF(sCMD2)) THEN
			step := CLOSE_CONNECTION;
		END_IF
	
	CLOSE_CONNECTION:
		IF fbSQLDatabase.Disconnect() THEN
			step := FINISH;
		END_IF
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="PRG_SEQUENCE">
      <LineId Id="5" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="3" />
      <LineId Id="31" Count="4" />
      <LineId Id="37" Count="1" />
      <LineId Id="49" Count="0" />
      <LineId Id="39" Count="5" />
      <LineId Id="48" Count="0" />
      <LineId Id="45" Count="2" />
      <LineId Id="50" Count="4" />
      <LineId Id="25" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>